--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://172.30.1.5:3306/board
+    url: jdbc:mariadb://172.30.1.5:3306/board
     driver-class-name: org.mariadb.jdbc.Driver
     username: newuser
     password: 1234
